Fixed hashtag spacing

--- a/src/style/Profile.css
+++ b/src/style/Profile.css
@@ -74,6 +74,7 @@ body {
   margin: 15px 15px 0 15px;
   padding-bottom: 15px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+  word-spacing: 3px;
 }
 .content-card-footer {
   display: flex;
